lean-ray-server/quickcheck/Test/DeriveArbitrary/BitVecStructureTest.lean
import Quickcheck.Arbitrary
import Quickcheck.DeriveArbitrary
import Quickcheck.Attr
import Quickcheck.Testable

open Quickcheck Gen

set_option guard_msgs.diff true

/-- Dummy `inductive` where a constructor has a dependently-typed argument (`BitVec n`)
    whose index does not appear in the overall type (`DummyInductive`) -/
inductive DummyInductive where
  | FromBitVec : ‚ąÄ (n : Nat), BitVec n ‚Üí String ‚Üí DummyInductive
  deriving Repr

set_option trace.quickcheck.deriving.arbitrary true in
/--
trace: [quickcheck.deriving.arbitrary] ‚Źé
    [mutual
       def arbitraryDummyInductive‚úĚ : Nat ‚Üí Quickcheck.Gen (@DummyInductive‚úĚ) :=
         let rec aux_arb (fuel‚úĚ : Nat) : Quickcheck.Gen (@DummyInductive‚úĚ) :=
           match fuel‚úĚ with
           | Nat.zero =>
             Quickcheck.Gen.oneOfWithDefault
               (do
                 let a‚úĚ ‚Üź Quickcheck.Arbitrary.arbitrary
                 let a‚úĚ¬Ļ ‚Üź Quickcheck.Arbitrary.arbitrary
                 let a‚úĚ¬≤ ‚Üź Quickcheck.Arbitrary.arbitrary
                 return DummyInductive.FromBitVec a‚úĚ a‚úĚ¬Ļ a‚úĚ¬≤)
               [(do
                   let a‚úĚ ‚Üź Quickcheck.Arbitrary.arbitrary
                   let a‚úĚ¬Ļ ‚Üź Quickcheck.Arbitrary.arbitrary
                   let a‚úĚ¬≤ ‚Üź Quickcheck.Arbitrary.arbitrary
                   return DummyInductive.FromBitVec a‚úĚ a‚úĚ¬Ļ a‚úĚ¬≤)]
           | fuel'‚úĚ + 1 =>
             Quickcheck.Gen.frequency
               (do
                 let a‚úĚ ‚Üź Quickcheck.Arbitrary.arbitrary
                 let a‚úĚ¬Ļ ‚Üź Quickcheck.Arbitrary.arbitrary
                 let a‚úĚ¬≤ ‚Üź Quickcheck.Arbitrary.arbitrary
                 return DummyInductive.FromBitVec a‚úĚ a‚úĚ¬Ļ a‚úĚ¬≤)
               [(1,
                   (do
                     let a‚úĚ ‚Üź Quickcheck.Arbitrary.arbitrary
                     let a‚úĚ¬Ļ ‚Üź Quickcheck.Arbitrary.arbitrary
                     let a‚úĚ¬≤ ‚Üź Quickcheck.Arbitrary.arbitrary
                     return DummyInductive.FromBitVec a‚úĚ a‚úĚ¬Ļ a‚úĚ¬≤)),
                 ]
         fun fuel‚úĚ => aux_arb fuel‚úĚ
     end,
     instance : Quickcheck.ArbitraryFueled‚úĚ (@DummyInductive‚úĚ) :=
       ‚ü®arbitraryDummyInductive‚úĚ‚ü©]
-/
#guard_msgs in
deriving instance Arbitrary for DummyInductive

-- Test that we can successfully synthesize instances of `Arbitrary` & `ArbitraryFueled`

/-- info: instArbitraryFueledDummyInductive -/
#guard_msgs in
#synth ArbitraryFueled DummyInductive

/-- info: instArbitraryOfArbitraryFueled -/
#guard_msgs in
#synth Arbitrary DummyInductive

/-- Shrinker for `DummyInductive` -/
def shrinkDummyInductive : DummyInductive ‚Üí List DummyInductive
  | .FromBitVec n bitVec str =>
    let shrunkenBitVecs := Shrinkable.shrink bitVec
    let shrunkenStrs := Shrinkable.shrink str
    (fun (bv, s) => .FromBitVec n bv s) <$> List.zip shrunkenBitVecs shrunkenStrs

/-- `Shrinkable` instance for `DummyInductive` -/
instance : Shrinkable DummyInductive where
  shrink := shrinkDummyInductive

/-- `SampleableExt` instance for `DummyInductive` -/
instance : SampleableExt DummyInductive :=
  SampleableExt.mkSelfContained Arbitrary.arbitrary

/-- To test whether the derived generator can generate counterexamples,
    we state an (erroneous) property that states that all `BitVec` arguments
    to `DummyInductive.FromBitVec` represent the `Nat` 2, and see
    if the derived generator can refute this property. -/
def BitVecEqualsTwo : DummyInductive ‚Üí Bool
  | .FromBitVec _ bitVec _ => bitVec.toNat == 2

/-- error: Found a counter-example! -/
#guard_msgs in
#eval Testable.check (‚ąÄ ind : DummyInductive, BitVecEqualsTwo ind)
  (cfg := {numInst := 10, maxSize := 5, quiet := true})
